--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
         <div class="row">
         <div class="column">
             <a href ="characters.html"></a>
-            <img src="images/the_.png" alt="Characters" style="width:75%">
+            <img src="png" alt="Characters" style="width:80%">
             </a>
         </div>
         <div class="column"></div>
-    </body>
+            <a href ="quotes.html">
+            <img src=".png" alt="Quotes" style="width:80%">
+            </a>
+        </div>
+        <div class = "column">
+            <a href ="review.html">
+                <img src=".png" alt="Review" style="width:80%">
+        </div>
+    
 </html>
