--- a/quotes.html
+++ b/quotes.html
@@ -8,7 +8,15 @@
     </head>
     <body>
         <h1> Quotes </h1>
-        <h2> Quote 1 </h2>
-        <h3> - who said it in the book </h3>
+        <h2> “What is a game?" Marx said. "It's tomorrow, and tomorrow, and tomorrow. It's the possibility of infinite rebirth, infinite redemption. The idea that if you keep playing, you could win. No loss is permanent, because nothing is permanent, ever.”</h2>
+        <br><br><br>
+        <h2>This is what time travel is. It’s looking at a person, and seeing them in the present and the past, concurrently. And that mode of transport only worked with those one had known a significant time.</h2>
+        <br><br><br>
+        <h2>The game is only over if you stop playing. There is always one more life. Even the most brutal death isn’t final.</h2>
+        <br><br><br>
+        <h2>A programmer is a diviner of possible outcomes, and a seer of unseen world</h2>
+        <br><br><br>
+        <h2>He knew what he was experiencing was a basic error in programming, and he wished he could open up his brain and delete the bad code. Unfortunately, the human brain is every bit as closed a system as a Mac.</h2>
+        <br><br><br>
     </body>
 </html>
