--- a/review.html
+++ b/review.html
@@ -8,7 +8,7 @@
     <body>
         <h1> 
             <a href ="index.html">
-            <img src=".png" alt="Home" class="img-right">
+            <img src="home.png" alt="Home" class="img-right">
             </a>
             My own personal review of the story 
         </h1>
