--- a/characters.html
+++ b/characters.html
@@ -9,7 +9,7 @@
     <body>
         <h1> 
             <a href ="index.html">
-            <img src=".png" alt="Home" class="img-right">
+            <img src="home.png" alt="Home" class="img-right">
             </a>
             Sadie Green 
         </h1>
