--- a/quotes.html
+++ b/quotes.html
@@ -7,10 +7,15 @@
 
     </head>
     <body>
+        <h1>
+            <a href ="index.html">
+                <img src="home.png" alt="Home" class="img-right">
+                </a>
+        </h1>
         <h1> Quotes </h1>
         <h2> “What is a game?" Marx said. "It's tomorrow, and tomorrow, and tomorrow. It's the possibility of infinite rebirth, infinite redemption. The idea that if you keep playing, you could win. No loss is permanent, because nothing is permanent, ever.”</h2>
         <br><br><br>
-        <h2>This is what time travel is. It’s looking at a person, and seeing them in the present and the past, concurrently. And that mode of transport only worked with those one had known a significant time.</h2>
+        <h2>This is what time travel is. It is looking at a person, and seeing them in the present and the past, concurrently. And that mode of transport only worked with those one had known a significant time.</h2>
         <br><br><br>
         <h2>The game is only over if you stop playing. There is always one more life. Even the most brutal death isn’t final.</h2>
         <br><br><br>
