--- a/characters.html
+++ b/characters.html
@@ -17,8 +17,7 @@
         <br> <br> 
 
         <p> 
-            <img src=".png" alt="Sadie Green" class="img-left">
-            Enchanted with programming from a young age, Sadie Green was one of the key developers on Ichigo, a videogame that launched her and her friend Sam into the videogame space. She is creative and battles with her feelings of underappreciation and lonliness. 
+            
         </p>
 
         <br> 
@@ -26,10 +25,17 @@
         <h1> Sam Masur </h1>
         <br> <br>
         <p>
-            <img src=".png" alt="Sam Masur" class="img-right">
-            
+            Sam Masur is someone who you immediately sense has been through a lot, even before you know the details. He has a quiet, heavy presence. He walks with a noticeable limp from his childhood. It is a  visible reminder of his trauma, and it contributes to his sense of isolation. His appearance does not scream for attention because he dresses plainly, keeps to himself, and always seems to be carrying some invisible weight.
         </p>
         <br>
+        <p>
+            He does not open up easily, and when he does, it often comes out in a weird way, such as through games, sarcasm, and actions. He feels like  he cannot express his thoughts through his words. There is a kind of sadness to him that clouds around him. He is used to being misunderstood, so he protects himself by staying a few steps behind or ahead of anyone. 
+        </p>
+        <br>
+        <p>
+            He is brilliant but does not have an ego. He is pressurized to to prove his worth. He is methodical, thoughtful, and focused when he is working. He builds layer by layer, always thinking more than one step ahead. He is scared of failure, of imperfection, of letting people see the messy parts of him.
+        </p>
+        <br>Sam is the kind of person who is always in the back in a crowded room. He does not chase attention, and he is shy of praise. But his mind is always working, always building. His seriousness is really just a reflection of how much he cares about the work and about being good enough. </br>
         <h1> Marx Watanabe</h1>
         <br> <br>
         <p>
