--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
             <a href ="review.html">
                 <img src="review.png" alt="Review" style="width:80%">
         </div>
+        <div class = "column">
+            <a href ="games.html">
+                <img src="games.png" alt="Games" style="width:80%">
+        </div>
+        <div class = "column">
+            <a href ="timeline.html">
+                <img src="timeline.png" alt="Timeline" style="width:80%">
+        </div>
     
 </html>
