--- a/characters.html
+++ b/characters.html
@@ -17,12 +17,22 @@
         <br> <br> 
 
         <p> 
-            
+            Sadie Green walks into a room like she already knows where she’s going and why. She is sharp, confident, and a bit impatient. She’s someone you notice because of the intensity in her eyes and the energy that follows her around.
         </p>
 
         <br> 
-
-        <h1> Sam Masur </h1>
+        <p>
+            Her mind never stops working. Sadie is always chasing new ideas on what to create and questioning how things could be better or more interesting. She tends to be restless and critical of herself. She has high standards, and she doesn’t like to settle. If something doesn’t live up to her vision, she gets frustrated quickly. She isn’t afraid to speak her mind, and she doesn’t have much patience for people who don’t keep up.
+        </p>
+        <br>
+        <p>
+            Sadie is private because she doesn’t want to be seen as weak. She knows what it’s like to be underestimated, and she’s determined never to let that happen again. She’s had moments in her life that taught her to put up walls, where she has to prioritize her mind over her heart. She’s selective about when and how she lets people see the real her. She often feels pressure to be the best version of herself at all times.
+        </p>
+        <br>
+        <p>
+            She holds herself to impossibly high expectations, and when she falls short, it hurts. But she doesn’t show that hurt easily. Instead, she dives deeper into her work. She thrives in challenges, especially when they give her the chance to prove that she belongs exactly where she is. Sadie is someone who’s hard to impress and even harder to ignore.
+        </p>
+        <h2> Sam Masur </h2>
         <br> <br>
         <p>
             Sam Masur is someone who you immediately sense has been through a lot, even before you know the details. He has a quiet, heavy presence. He walks with a noticeable limp from his childhood. It is a  visible reminder of his trauma, and it contributes to his sense of isolation. His appearance does not scream for attention because he dresses plainly, keeps to himself, and always seems to be carrying some invisible weight.
@@ -39,8 +49,18 @@
         <h1> Marx Watanabe</h1>
         <br> <br>
         <p>
-            <img src=".png" alt="Marx Watanabe" class="img-left">
-            description
+            Marx Watanabe is effortlessly charismatic. He’s tall, good-looking, and has this easygoing style that makes him approachable. People just gravitate toward him. There’s something relaxing about his presence. He dresses casually but intentionally, walks with confidence, and gives off the kind of warmth that makes people instantly feel a little more at ease.
+        </p>
+        <br>
+        <p>
+            Marx is thoughtful and emotionally grounded. He’s not the type to get flustered or thrown off by chaos. He reads the room, figures out what’s needed, and steps in without being asked. He pays attention—not just to conversations, but to the things people don’t say, and it allows him to have emotional awareness that makes him a steady presence in any situation. He’s someone who knows how to lead without dominating.
+        </p>
+        <p>
+            Marx is smart, but in intelligence that is social and intuitive. He understands people, understands how to balance personalities, manage chaos, and bring out the best in others. He’s organized, driven, and has a strong sense of purpose. He also knows how to laugh, how to lighten the mood, how to remind everyone that work isn’t everything.
+        </p>
+        <br>
+        <p>
+            At his core, Marx is a caretaker. He wants things to run well because he cares about the people involved. He’s the person who makes sure no one gets left behind and notices when someone’s struggling even if they say they’re fine. He doesn’t ask for attention or credit and has a calming strength. 
         </p>
     </body>
 </html>
