--- a/play.html
+++ b/play.html
@@ -11,6 +11,17 @@
             <a href ="index.html">
                 <img src="home.png" alt="Home" class="img-right">
                 </a>
+            Games
         </h1>
+        <br> <br>
+        <h3> Ichigo</h3>
+        <p>
+            Ichigo is the game that launches Sam and Sadie into the spotlight. It is a beautifully designed adventure game. The game centers on a child Ichigo who must navigate through a world of increasingly difficult challenges after a major loss. Every level is a symbol for grief and learning how to survive in a world that no longer feels safe. It was the way it made players feel. It used pixel art to tell an emotionally layered story with messages about healing. The character didn’t fight enemies  on the outside. Instead, Ichigo solved emotional obstacles, grew stronger by reflecting, learning, and evolving. There was a sincerity to the game that stood out, contrasting to the fact that most popular games leaned toward violence or competition. Ichigo made people cry, made them feel understood and proved games could be art.
+        </p>
+        <br> <br>
+        <h3> Emily Blaster</h3>
+        <p>
+            EmilyBlaster is Sadie’s game created before she and Sam reconnected. It’s inspired by the poetry of Emily Dickinson and turns poetry into a different type of game. Players blast words in the right order to construct Dickinson’s poems. But the way that she describes it is different. She believes it is a different take on language, order, and how meaning is created and destroyed. Even though this started as a Sadie uses this game to experiment to experiment with the difference between literature and interactivity. Sadie is saying, through EmilyBlaster, that there’s no one way to make a game, and no one kind of person who should be allowed to make them. It should be everyone who should be able to make a game.
+        </p>
     </body>
 </html>
