--- a/games.html
+++ b/games.html
@@ -7,11 +7,28 @@
 
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="characters.html">Characters</a></li>
+                <li><a href="quotes.html">Quotes</a></li>
+                <li><a href="review.html">Review</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="timeline.html">Timeline</a></li>
+                <li><a href="play.html">Play</a></li>
+                <li><a href="relationships.html">Relationships</a></li>
+            </ul>
+        </nav>
         <h1>
             <a href ="index.html">
                 <img src="home.png" alt="Home" class="img-right">
                 </a>
+            Games
         </h1>
+        <section>
+            <h2>Emily Blaster</h2>
+            <p>EmilyBlaster is Sadie’s game created before she and Sam reconnected. It’s inspired by the poetry of Emily Dickinson and turns poetry into a different type of game. Players blast words in the right order to construct Dickinson’s poems. But the way that she describes it is different. She believes it is a different take on language, order, and how meaning is created and destroyed. Even though this started as a Sadie uses this game to experiment to experiment with the difference between literature and interactivity. Sadie is saying, through EmilyBlaster, that there’s no one way to make a game, and no one kind of person who should be allowed to make them. It should be everyone who should be able to make a game.</p>
+        </section>
         
     </body>
 </html>
