--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="characters.html">Characters</a></li>
+                <li><a href="quotes.html">Quotes</a></li>
+                <li><a href="review.html">Review</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="timeline.html">Timeline</a></li>
+            </ul>
+        </nav>
+        <blockquote class="quote">
+            “To play requires love and trust.”
+        </blockquote>
         <h1> Tomorrow, Tomorrow, and Tomorrow </h1>
         <p>
             Hello! Welcome to my Tribute page about Tomorrow, Tomorrow, and Tomorrow, by Gabrielle Zevin! 
@@ -34,5 +47,8 @@
             <a href ="timeline.html">
                 <img src="timeline.png" alt="Timeline" style="width:80%">
         </div>
-    
+        <div class="author">
+            <img src="zevin.jpg" alt="Gabrielle Zevin">
+            <p><strong>Gabrielle Zevin</strong> is a bestselling author known for her imaginative, deeply human storytelling.</p>
+        </div>
 </html>
