--- a/quotes.html
+++ b/quotes.html
@@ -7,13 +7,25 @@
 
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="characters.html">Characters</a></li>
+                <li><a href="quotes.html">Quotes</a></li>
+                <li><a href="review.html">Review</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="timeline.html">Timeline</a></li>
+                <li><a href="play.html">Play</a></li>
+                <li><a href="relationships.html">Relationships</a></li>
+            </ul>
+        </nav>
         <h1>
             <a href ="index.html">
                 <img src="home.png" alt="Home" class="img-right">
                 </a>
         </h1>
         <h1> Quotes </h1>
-        <h2> “What is a game?" Marx said. "It's tomorrow, and tomorrow, and tomorrow. It's the possibility of infinite rebirth, infinite redemption. The idea that if you keep playing, you could win. No loss is permanent, because nothing is permanent, ever.”</h2>
+        <blockquote> “What is a game?" Marx said. "It's tomorrow, and tomorrow, and tomorrow. It's the possibility of infinite rebirth, infinite redemption. The idea that if you keep playing, you could win. No loss is permanent, because nothing is permanent, ever.”</blockquote>
         <br><br><br>
         <h2>This is what time travel is. It is looking at a person, and seeing them in the present and the past, concurrently. And that mode of transport only worked with those one had known a significant time.</h2>
         <br><br><br>
