--- a/review.html
+++ b/review.html
@@ -6,6 +6,18 @@
          <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="characters.html">Characters</a></li>
+                <li><a href="quotes.html">Quotes</a></li>
+                <li><a href="review.html">Review</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="timeline.html">Timeline</a></li>
+                <li><a href="play.html">Play</a></li>
+                <li><a href="relationships.html">Relationships</a></li>
+            </ul>
+        </nav>    
         <h1> 
             <a href ="index.html">
             <img src="home.png" alt="Home" class="img-right">
